--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
     "@rollup/plugin-node-resolve": "^7.1.1",
+    "@rollup/plugin-replace": "^2.3.2",
     "accepts": "^1.3.7",
     "acorn": "^7.1.1",
     "amex-jest-preset-react": "^5.0.2",
