--- a/scripts/.eslintrc.json
+++ b/scripts/.eslintrc.json
@@ -4,5 +4,7 @@
     "import/no-extraneous-dependencies": ["error", {"devDependencies": true, "optionalDependencies": true, "peerDependencies": false}],
     // we need to message the user for DX
     "no-console": 0
-  }
+  },
+  // added babel parser to allow optional chaining operator
+  "parser": "babel-eslint" 
 }
